# TicTacToeC

./: CMakeLists.txt  README.md  main.c
data/: CMakeLists.txt  hashmap.c  hashmap.h
gui/: CMakeLists.txt  gui.c  gui.h
test/: CMakeLists.txt  test_board.cpp  test_game.cpp  test_game_tree.cpp  test_hashmap.cpp  test_memory_management.cpp  test_monte_carlo.cpp
util/: CMakeLists.txt  board.c  board.h  game.c  game.h  game_tree.c  game_tree.h  list.c  list.h  monte_carlo.c  monte_carlo.h  player.c  player.h
